--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,14 @@
 html,
+
+* {
+  box-sizing: border-box;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
 body {
   min-height: 100%;
 }
@@ -15,10 +25,12 @@ code {
   color: #d400ff;
   border-radius: 0.1335rem;
 }
+
 code:not([class*='language-']):before,
 code:not([class*='language-']):after {
   content: '`';
 }
+
 code[class*='language-'] {
   padding: 0;
 }
