--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,36 +1,49 @@
 html,
-
 * {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 a {
-  text-decoration: none;
-  color: inherit;
+    text-decoration: none;
+    color: inherit;
 }
 
 body {
-  min-height: 100%;
+    min-height: 100%;
 }
 
 #__next {
-  height: 100%;
+    height: 100%;
 }
 
 code {
-  font-family: 'Inter', sans-serif, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
-    'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue';
-  padding: 0.1rem 0.4rem;
-  font-size: 90%;
-  color: #d400ff;
-  border-radius: 0.1335rem;
+    font-family: 'Inter', sans-serif, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
+        'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue';
+    padding: 0.1rem 0.4rem;
+    font-size: 90%;
+    color: #d400ff;
+    border-radius: 0.1335rem;
 }
 
 code:not([class*='language-']):before,
 code:not([class*='language-']):after {
-  content: '`';
+    content: '`';
 }
 
 code[class*='language-'] {
-  padding: 0;
+    padding: 0;
+}
+
+/* Custom styles */
+.zebrado:nth-child(odd) {
+    padding: 0.5rem;
+    background-color: #fff;
+    border-bottom: 1px solid #4c4e641f;
+    border-radius: 4px;
+}
+.zebrado:nth-child(even) {
+    padding: 0.5rem;
+    background-color: #f6f6f7;
+    border-bottom: 1px solid #4c4e641f;
+    border-radius: 4px;
 }
